--- a/view/Estudios.html
+++ b/view/Estudios.html
@@ -11,11 +11,10 @@
 </head>
 <body>
 <nav>
-    <a class="active" href="../index.html">Inicio</a>
-    <a href="../Curriculum/view/Estudios.html">Estudios</a>
-    <a href="#contact">Contacto</a>
-    <a href="#about">Sobre mi</a>
+  <a href="../view/Inicio.html">Inicio</a>
+  <a class="active" href="../view/Estudios.html">Estudios</a>
+  <a href="../view/Contacto.html">Contacto</a>
+  <a href=../view/Experiencia.html>Sobre mi</a>
 </nav>
-<h1 class="Entrada">Mi Título</h1>
 </body>
 </html>
