--- a/view/Experiencia.html
+++ b/view/Experiencia.html
@@ -11,16 +11,10 @@
 </head>
 <body>
 <nav>
-  <a class="active" href="../view/Inicio.html">Inicio</a>
+  <a href="../view/Inicio.html">Inicio</a>
   <a href="../view/Estudios.html">Estudios</a>
   <a href="../view/Contacto.html">Contacto</a>
-  <a href="../view/Experiencia.html">Sobre mi</a>
+  <a class="active" href="../view/Experiencia.html">Sobre mi</a>
 </nav>
-<img class="Imagen" src="../img/descarga.jpeg" alt="Imagen principal">
-<h1 class="Container">Mi Curriculum</h1>
-<dl> Quien soy?
-<dd></dd>
-
-</dl>
 </body>
 </html>
