--- a/view/Contacto.html
+++ b/view/Contacto.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 <style>
 </style>
 </head>
 <body>
 <nav>
-  <a class="active" href="./index.html">Inicio</a>
-  <a href="./view/Estudios.html">Estudios</a>
-  <a href="./view/Contacto.html">Contacto</a>
-  <a href="./view/Sobre mi.html">Sobre mi</a>
+  <a href="../view/Inicio.html">Inicio</a>
+  <a href="../view/Estudios.html">Estudios</a>
+  <a class="active" href="../view/Contacto.html">Contacto</a>
+  <a href=../view/Experiencia.html>Sobre mi</a>
 </nav>
-<img class="Entrada" src="./img/descarga.jpeg" alt="Imagen principal">
-<h1 class="Entrada">Mi Título</h1>
 </body>
 </html>
