--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,3 +24,11 @@ nav {
   .Container{
     text-align: center;
   }
+  .letra{
+    font-size: 24px;
+    text-align: center;
+  }
+  .Titulos{
+    font-size: 34px;
+    text-align: center;
+  }
