--- a/view/Inicio.html
+++ b/view/Inicio.html
@@ -22,6 +22,7 @@
 <h1 class="Titulos">Quien soy?</h1>
 <p class="letra">Hola soy Carlos Milan Diaz.Soy un estudiante sin experencia apasinado por la informatica que le gusta trabajar.Soy muy buen compañero y me gusta trabajar en equipo.
 </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/t1nqbALWFf4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 <h1 class="Titulos">Datos Personales</h1>
 <ul>
@@ -31,7 +32,7 @@
   <li class="letra">Telefono:  644 86 97 84</li>
   <li class="letra"> Fecha de nacimento: 22 de junio de 2005</li>
  </ul>
- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.112863625156!2d2.104722275368777!3d41.34990049832059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498d64bd023fd%3A0x26089fc39cb352a3!2sCentro%20de%20Estudios%20Joan%20XXIII!5e0!3m2!1ses!2ses!4v1683743555785!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="450" style="border:0;"allowfullscreen="" loading="lazy" ></iframe>
+ <iframe class="Video" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.112863625156!2d2.104722275368777!3d41.34990049832059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498d64bd023fd%3A0x26089fc39cb352a3!2sCentro%20de%20Estudios%20Joan%20XXIII!5e0!3m2!1ses!2ses!4v1683743555785!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="450" style="border:0;"allowfullscreen="" loading="lazy" ></iframe>
   </p>
 
 </body>
