--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,3 +32,12 @@ nav {
     font-size: 34px;
     text-align: center;
   }
+  .Imagen{
+   margin-left: 42%;
+  }
+  .Video{
+    width: 50%;
+  }
+  @media{
+    max-width: 600px;
+  }
