--- a/view/Inicio.html
+++ b/view/Inicio.html
@@ -15,6 +15,10 @@
   <a href="../view/Estudios.html">Estudios</a>
   <a href="../view/Contacto.html">Contacto</a>
   <a href="../view/Experiencia.html">Experiencia</a>
+  <a href="./en/Start.html">Start</a>
+  <a href="./en/Experience.html">Experience</a>
+  <a href="./en/Contact.html">Contact</a>
+  <a href="./en/Studies.html">Studies</a>
 </nav>
 <img class="Imagen" src="../img/descarga.jpeg" alt="Imagen principal">
 <h1 class="Container">Mi Curriculum</h1>
@@ -22,7 +26,7 @@
 <h1 class="Titulos">Quien soy?</h1>
 <p class="letra">Hola soy Carlos Milan Diaz.Soy un estudiante sin experencia apasinado por la informatica que le gusta trabajar.Soy muy buen compañero y me gusta trabajar en equipo.
 </p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/t1nqbALWFf4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe class="Video" width="560" height="315" src="https://www.youtube.com/embed/t1nqbALWFf4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 <h1 class="Titulos">Datos Personales</h1>
 <ul>
