--- a/view/en/Contact.html
+++ b/view/en/Contact.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/estilos.css">
-<style>
-</style>
+    <link rel="stylesheet" href="../../css/estilos.css">
 </head>
 <body>
 <nav>
-  <a href="../view/Inicio.html">Inicio</a>
-  <a href="../view/Estudios.html">Estudios</a>
-  <a class="active" href="../view/Contacto.html">Contacto</a>
-  <a href=../view/Experiencia.html>Experiencia</a>
-  <a href="./en/Start.html">Start</a>
-  <a href="./en/Experience.html">Experience</a>
-  <a href="./en/Contact.html">Contact</a>
-  <a href="./en/Studies.html">Studies</a>
+<a href="../Inicio.html">Inicio</a>
+<a href="../Estudios.html">Estudios</a>
+<a href="../Contacto.html">Contacto</a>
+<a href="../Experiencia.html">Experiencia</a>
+<a href="./Start.html">Start</a>
+<a href="./Experience.html">Experience</a>
+<a class="active" href="./Contact.html">Contact</a>
+<a href="./Studies.html">Studies</a>
 </nav>
-<h1 class="Titulos">Mis datos de Contacto</h1>
+<h1 class="Titulos">My contact data</h1>
 <br>
-<li class="letra">Correo personal: Carlosmilandiazgmail.com</li>
+<li class="letra">Personal email: Carlosmilandiazgmail.com</li>
 <br>
-<li class="letra">Telefono:  644 86 97 84</li>
+<li class="letra">Telephone: 644 86 97 84</li>
 <br>
 <li class="letra">Instagram: crls_22</li>
 <br>
-<li class="letra">Direccion: Carrer de França, 13, 08907 L'Hospitalet de Llobregat</li>
+<li class="letra">Address: Carrer de França, 13, 08907 L'Hospitalet de Llobregat</li>
 <iframe class="Video" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d650.2435503374417!2d2.111242269587882!3d41.35616020486254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498dbed508065%3A0x643236ea205c31d4!2sCarrer%20de%20Fran%C3%A7a%2C%2013%2C%2008907%20L&#39;Hospitalet%20de%20Llobregat%2C%20Barcelona!5e1!3m2!1ses!2ses!4v1683820646950!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
