--- a/view/en/Experience.html
+++ b/view/en/Experience.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../../css/estilos.css">
 <style>
 </style>
 </head>
 <body>
 <nav>
-  <a href="../view/Inicio.html">Inicio</a>
-  <a href="../view/Estudios.html">Estudios</a>
-  <a href="../view/Contacto.html">Contacto</a>
-  <a class="active" href="../view/Experiencia.html">Experiencia</a>
-  <a href="./en/Start.html">Start</a>
-  <a href="./en/Experience.html">Experience</a>
-  <a href="./en/Contact.html">Contact</a>
-  <a href="./en/Studies.html">Studies</a>
+  <a href="../Inicio.html">Inicio</a>
+  <a href="../Estudios.html">Estudios</a>
+  <a href="../Contacto.html">Contacto</a>
+  <a href="../Experiencia.html">Experiencia</a>
+  <a href="./Start.html">Start</a>
+  <a class="active" href="./Experience.html">Experience</a>
+  <a href="./Contact.html">Contact</a>
+  <a href="./Studies.html">Studies</a>
 </nav>
-<h1 class="Titulos">Mi experiencia laboral</h1>
-<li class="letra">Practicas FCT: Jesuïtes Bellvitge - Centre d'Estudis Joan XXIII Horario de 9h a 13h </li>
+<h1 class="Titulos">My work experience</h1>
+<li class="letra">Internship FCT: Jesuïtes Bellvitge - Center d'Estudis Joan XXIII Hours from 9am to 1pm</li>
 <iframe class="Video" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.112863625156!2d2.104722275368777!3d41.34990049832059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498d64bd023fd%3A0x26089fc39cb352a3!2sCentro%20de%20Estudios%20Joan%20XXIII!5e0!3m2!1ses!2ses!4v1683743555785!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="450" style="border:0;"allowfullscreen="" loading="lazy" ></iframe>
 </body>
 </html>
