--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,8 +36,50 @@ nav {
    margin-left: 42%;
   }
   .Video{
-    width: 50%;
+    margin-left: 30%;
   }
-  @media{
-    max-width: 600px;
+  @media only screen and (max-width:700px)´{
+    nav {
+      background-color: black;
+      overflow: hidden;
+    }
+    
+    nav a {
+      float: left;
+      color: white;
+      text-align: center;
+      padding: 7px 8px;
+      text-decoration: none;
+    }
+    
+    nav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    
+    nav a.active {
+      background-color: #4CAF50;
+      color: white;
+    }
+  
+    .Container{
+      text-align: center;
+    }
+    .letra{
+      font-size: 12px;
+      text-align: center;
+    }
+    .Titulos{
+      font-size: 17px;
+      text-align: center;
+    }
+    .Imagen{
+     margin-left: 21%;
+    }
+    .Video{
+      margin-left: 21%;
+    }
   }
+  
+
+    
