--- a/view/Estudios.html
+++ b/view/Estudios.html
@@ -14,7 +14,19 @@
   <a href="../view/Inicio.html">Inicio</a>
   <a class="active" href="../view/Estudios.html">Estudios</a>
   <a href="../view/Contacto.html">Contacto</a>
-  <a href=../view/Experiencia.html>Sobre mi</a>
+  <a href=../view/Experiencia.html>Experiencia</a>
 </nav>
+<h1 class="Titulos">Mis estudios</h1>
+<li class="letra">Estudios primarios: Centre d’Estudis Jaume Balmes</li>
+<iframe class="Video" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2994.860245163629!2d2.107476317443848!3d41.35539130000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498d96ebe5bbb%3A0x38bfd2b212ff1170!2sCentre%20d%E2%80%99Estudis%20Jaume%20Balmes!5e0!3m2!1ses!2ses!4v1683819009565!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<br>
+<li class="letra">Estudios secundarios: Centre d’Estudis Jaume Balmes inicio:2017 final:2021</li>
+<iframe class="Video" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2994.860245163629!2d2.107476317443848!3d41.35539130000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498d96ebe5bbb%3A0x38bfd2b212ff1170!2sCentre%20d%E2%80%99Estudis%20Jaume%20Balmes!5e0!3m2!1ses!2ses!4v1683819009565!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<br>
+<li class="letra">Grado Medio: Jesuïtes Bellvitge - Centre d'Estudis Joan XXIII inicio:2021 final: Cursando SMX2</li>
+<iframe class="Video" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.112863625156!2d2.104722275368777!3d41.34990049832059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498d64bd023fd%3A0x26089fc39cb352a3!2sCentro%20de%20Estudios%20Joan%20XXIII!5e0!3m2!1ses!2ses!4v1683743555785!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="450" style="border:0;"allowfullscreen="" loading="lazy" ></iframe>
+
+
+
 </body>
 </html>
